Include first introducing page

--- a/package.json
+++ b/package.json
@@ -68,5 +68,17 @@
     "webpack-dev-server": "^4.3.1",
     "webpack-merge": "^5.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@fullpage/react-fullpage": "^0.1.19",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
+    "@mui/styled-engine-sc": "^5.0.3",
+    "fullpage.js": "^3.1.2",
+    "install": "^0.13.0",
+    "react-particles-js": "^3.5.3",
+    "styled-components": "^5.3.1",
+    "tsparticles": "^1.35.4"
+  }
 }
