--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.2.8",
+    "antd": "^4.18.3",
     "react-particles-js": "^3.5.3",
     "tsparticles": "^1.35.4"
   }
