--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@mui/material": "^5.2.8",
     "antd": "^4.18.3",
     "react-particles-js": "^3.5.3",
+    "react-router-dom": "5.3.0",
     "tsparticles": "^1.35.4"
   }
 }
